[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/RouterCard.gd" type="Script" id=1]
[ext_resource path="res://Scenes/RouterCard/GotoPanel.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.890196, 0.890196, 0.87451, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 9.0
content_margin_right = 9.0
content_margin_top = 9.0
content_margin_bottom = 9.0
bg_color = Color( 0.435294, 0.435294, 0.435294, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.603922, 0.596078, 0.596078, 0.6 )
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 9.0
content_margin_right = 9.0
content_margin_top = 9.0
content_margin_bottom = 9.0
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.603922, 0.596078, 0.596078, 0.6 )
shadow_size = 3

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "hover_anim"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.419608, 0.862745, 0.67451, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "toggleon"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.419608, 0.862745, 0.67451, 1 ) ]
}

[node name="RouterCard" type="PanelContainer" groups=["RouterCard"]]
margin_right = 168.0
margin_bottom = 146.0
size_flags_vertical = 2
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 182.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 172.0
margin_bottom = 14.0

[node name="Id" type="LineEdit" parent="VBoxContainer/HBox"]
margin_right = 172.0
margin_bottom = 14.0
mouse_filter = 1
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
custom_styles/normal = SubResource( 2 )
text = "decision_one"

[node name="Save" type="Button" parent="VBoxContainer/HBox"]
visible = false
margin_left = 125.0
margin_right = 172.0
margin_bottom = 32.0
mouse_filter = 1
custom_colors/font_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Save"

[node name="Panel" type="PanelContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 172.0
margin_bottom = 226.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 165.0
margin_bottom = 201.0

[node name="ElseGoto" type="LineEdit" parent="VBoxContainer/Panel/VBoxContainer"]
margin_right = 158.0
margin_bottom = 24.0
mouse_filter = 1
placeholder_text = "else goto step"

[node name="AddGotos" type="Button" parent="VBoxContainer/Panel/VBoxContainer"]
margin_top = 28.0
margin_right = 158.0
margin_bottom = 60.0
mouse_filter = 1
custom_colors/font_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Add +"

[node name="GotoPanel" parent="VBoxContainer/Panel/VBoxContainer" groups=["RouterGotoPanel"] instance=ExtResource( 2 )]
margin_top = 64.0
margin_bottom = 194.0
mouse_filter = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/hover_anim = SubResource( 6 )
anims/toggleon = SubResource( 7 )

[connection signal="gui_input" from="." to="." method="_on_RouterCard_gui_input"]
[connection signal="pressed" from="VBoxContainer/Panel/VBoxContainer/AddGotos" to="." method="_on_AddGotos_pressed"]
